# learn-gtest

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cc
src/base/: CMakeLists.txt  add.h  hello.cc  hello.h
src/system1/: CMakeLists.txt  system.cc  system.h  user.h
src/system2/: CMakeLists.txt  system.cc  system.h  user.cc  user.h
src/unittest/: CMakeLists.txt  add_test.cc  main.cc  mock_user.h  mock_user2.h  system1_test.cc  system2_test.cc
